# NewtScope-Firmware

./: '  CMakeLists.txt  LICENCE.txt  adc_clock.pio  calibration_memory.c  calibration_memory.h  led.pio  main.c  main.h  mcp41010.c  mcp41010.h  normal_capture.pio  readme.md  ring_buffer.c  ring_buffer.h  sample.pio  sampler.pio  serial_protocol.h  simu_waveform.c  simu_waveform.h  sine.py  temp1.c
ring_buffer_mock/: ring_buffer.c
